experimental: moved the columns list form to a dedicated window (to avoid cluttering any external wrapping form with a lot of parameters, making it exceed the maximum variables limit)

--- a/app/design/adminhtml/default/default/template/bl/customgrid/grid/form/container.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/grid/form/container.phtml
@@ -56,7 +56,10 @@ blcgGridForm.submit = function(url) {
                 
                 if (response) {
                     <?php if ($this->getReloadGridAfterSuccess()): ?>
-                    blcg.Grid.Tools.reloadGrid('<?php echo $_gridJsObjectName ?>');
+                    blcg.Grid.Tools.reloadGrid('<?php echo $_gridJsObjectName ?>', null, null, <?php echo ($this->getIsFrameContainedForm() ? 'true' : 'false') ?>);
+                    <?php endif ?>
+                    <?php if ($this->getIsFrameContainedForm()): ?>
+                    (window.top || window).blcg.Tools.closeDialog();
                     <?php endif ?>
                 }
             },
@@ -85,6 +88,7 @@ blcgGridForm.submit = function(url) {
         blcg.Tools.closeDialog();
         return true;
     }
+    
     return false;
 }.bind(blcgGridForm);
 
@@ -97,6 +101,7 @@ $('<?php echo $_formHtmlId ?>').observe('keydown', function(e) {
     }
 });
 
+blcg.Tools.adaptPopupPageWrapper();
 blcg.Tools.focusFirstInput('<?php echo $_formHtmlId ?>');
 <?php endif ?>
 //]]>
