--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config/columns/list.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config/columns/list.phtml
@@ -24,7 +24,12 @@
     $_alignments   = $this->getColumnAlignments();
     $_origins      = $this->getColumnOrigins();
 ?>
-<div class="blcg-custom-grid-config" id="<?php echo $this->getHtmlId() ?>" <?php if (!$this->isStandAlone()): ?>style="display:none;"<?php endif ?>>
+<?php if (!$this->isStandAlone()): ?>
+<form id="<?php echo $this->getFormId() ?>" action="<?php echo $this->getSaveUrl() ?>" method="post">
+    <input type="hidden" name="grid_id" value="<?php echo $_gridModel->getId() ?>" />
+    <input type="hidden" name="profile_id" value="<?php echo $_gridModel->getProfileId() ?>" />
+<?php endif ?>
+<div class="blcg-custom-grid-config" id="<?php echo $this->getHtmlId() ?>">
     <div id="<?php echo $this->getHtmlId() ?>-header">
         <table class="massaction" cellspacing="0" cellpadding="0">
             <tr>
@@ -36,6 +41,7 @@
                     <strong id="<?php echo $this->getHtmlId() ?>-count">0</strong> <?php echo $this->__('columns selected') ?>
                     (<strong id="<?php echo $this->getHtmlId() ?>-filter-count">0</strong> <?php echo $this->__('for filtering only') ?>)
                 </td>
+                <?php if ($this->isStandAlone()): ?>
                 <td>
                     <div class="right">
                         <div class="entry-edit">
@@ -45,15 +51,11 @@
                                         <?php echo $this->getAttributeColumnButtonHtml() ?>
                                     </span>
                                 <?php endif ?>
-                                <?php if (!$this->isStandAlone()): ?>
-                                    <span class="field-row">
-                                        <?php echo $this->getSaveButtonHtml() ?>
-                                    </span>
-                                <?php endif ?>
                             </fieldset>
                         </div>
                     </div>
                 </td>
+                <?php endif ?>
             </tr>
         </table>
     </div>
@@ -246,6 +248,9 @@ new blcg.Grid.CustomColumn.ConfigButton(
         </div>
     </div>
 </div>
+<?php if (!$this->isStandAlone()): ?>
+</form>
+<?php endif ?>
 <script type="text/javascript">
 //<![CDATA[
 <?php if ($this->canHaveAttributeColumns()): ?>
@@ -260,10 +265,9 @@ var blcgAlignmentSelectTemplate = '<select name="columns[{{id}}][align]" class="
 
 var blcgStoreSelectTemplate = <?php echo $this->getStoreSelectHtml() ?>;
 
-<?php echo $this->getConfigJsObjectName() ?> = new blcg.Grid.ColumnsConfigForm(
+<?php echo $this->getConfigJsObjectName() ?> = new blcg.Grid.ColumnsListConfig(
     '<?php echo $_htmlId ?>',
     '<?php echo $_htmlId ?>-table-column',
-    '<?php echo $this->getSaveUrl() ?>',
     {
         newRowId: '<?php echo $this->getTableRowHtmlId() ?>',
         orderInputId: '<?php echo $this->getOrderInputHtmlId() ?>',
@@ -294,9 +298,7 @@ var blcgStoreSelectTemplate = <?php echo $this->getStoreSelectHtml() ?>;
         ],
         maxOrder: <?php echo ($this->getUseDragNDrop() ? $_maxDndOrder : $this->getColumnsMaxOrder()) ?>, 
         orderPitch: <?php echo $this->getColumnsOrderPitch() ?>, 
-        useDnd: <?php if ($this->getUseDragNDrop()): ?>true<?php else: ?>false<?php endif ?>,
-        gridObjectName: '<?php echo $this->jsQuoteEscape($this->getGridJsObjectName()) ?>',
-        additionalSaveParams: <?php echo $this->getAdditionalParamsJsonConfig() ?>
+        useDnd: <?php if ($this->getUseDragNDrop()): ?>true<?php else: ?>false<?php endif ?>
     }
 );
 
@@ -304,10 +306,9 @@ var blcgStoreSelectTemplate = <?php echo $this->getStoreSelectHtml() ?>;
 
 <?php else: ?>
 
-<?php echo $this->getConfigJsObjectName() ?> = new blcg.Grid.ColumnsConfigForm(
+<?php echo $this->getConfigJsObjectName() ?> = new blcg.Grid.ColumnsListConfig(
     '<?php echo $_htmlId ?>',
     '<?php echo $_htmlId ?>-table-column',
-    '<?php echo $this->getSaveUrl() ?>',
     {
         newRowId: '<?php echo $this->getTableRowHtmlId() ?>',
         orderInputId: '<?php echo $this->getOrderInputHtmlId() ?>',
@@ -315,9 +316,7 @@ var blcgStoreSelectTemplate = <?php echo $this->getStoreSelectHtml() ?>;
         newRowColumns: [],
         maxOrder: <?php echo ($this->getUseDragNDrop() ? $_maxDndOrder : $this->getColumnsMaxOrder()) ?>, 
         orderPitch: <?php echo $this->getColumnsOrderPitch() ?>,
-        useDnd: <?php if ($this->getUseDragNDrop()): ?>true<?php else: ?>false<?php endif ?>,
-        gridObjectName: '<?php echo $this->jsQuoteEscape($this->getGridJsObjectName()) ?>',
-        additionalSaveParams: <?php echo $this->getAdditionalParamsJsonConfig() ?>
+        useDnd: <?php if ($this->getUseDragNDrop()): ?>true<?php else: ?>false<?php endif ?>
     }
 );
 
