experimental: moved the profiles bar in its own block

--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
@@ -14,37 +14,6 @@
  */
 ?>
 <?php /** @var $this BL_CustomGrid_Block_Widget_Grid_Config */ ?>
-<?php $_gridModel = $this->getGridModel() ?>
-    <div id="<?php echo $this->getHtmlId() ?>-profiles-bar" class="blcg-grid-profiles-bar">
-        <div class="blcg-grid-profiles-list-wrapper">
-            <div class="blcg-grid-profiles-list-constrainer">
-                <div class="blcg-grid-profiles-list-sub-wrapper">
-                    <button type="button" title="<?php echo $this->__('Previous') ?>" class="blcg-grid-profiles-bar-button blcg-grid-profiles-bar-button-previous blcg-no-display"><span><span><?php echo $this->__('Previous') ?></span></span></button>
-                    <button type="button" title="<?php echo $this->__('Next') ?>" class="blcg-grid-profiles-bar-button blcg-grid-profiles-bar-button-next blcg-no-display"><span><span><?php echo $this->__('Next') ?></span></span></button>
-                    <ul class="blcg-grid-profiles-list"></ul>
-                </div>
-            </div>
-        </div>
-        <div class="blcg-grid-profiles-bar-cell">
-            <div class="blcg-grid-profiles-list-options blcg-grid-profiles-bar-buttons"></div>
-        </div>
-        <div class="blcg-grid-profiles-bar-fixed-part">
-            <div class="blcg-grid-profiles-bar-buttons">
-                <?php echo $this->getButtonsHtml() ?>
-            </div>
-        </div>
-    </div>
-<script type="text/javascript">
-//<![CDATA[
-<?php echo $this->getProfilesJsObjectName() ?> = new blcg.Grid.ProfilesBar(
-    '<?php echo $this->getHtmlId() ?>-profiles-bar',
-    <?php echo $this->getProfilesJsonConfig() ?>,
-    <?php echo $this->getSortedProfilesIdsJson() ?>,
-    <?php echo $this->getProfilesActionsJsonConfig() ?>,
-    '<?php echo $this->getGridBlockJsObjectName() ?>',
-    <?php echo $this->getProfilesBarJsonConfig() ?>
-);
-//]]>
-</script>
+<?php echo $this->getProfilesBarHtml() ?>
 <?php echo $this->getButtonsScripts() ?>
 <?php echo $this->getRssLinksHtml() ?>
